bpo-31701: faulthandler: ignore MSC and COM Windows exception (#3929) (#4416)

(cherry picked from commit 6e3d6b5dc22cd06d8c4d44a38a8a3415e4bebb16)